Redesign: Create 4 distinct sections with new layout
- Section 1: Latest Projects (6 items, horizontal grid with New Added badges)
- Section 2: All Projects (6 items, horizontal grid)
- Section 3: Experimental Projects (6 items filtered by category)
- Section 4: Categories (large thumbnails, 3 per row with gradient overlay)
- Removed all mock data - start with empty state
- Updated card design to match reference (medium size cards)
- Added responsive layout for mobile and tablet
- Improved empty state messaging

--- a/index.html
+++ b/index.html
@@ -46,31 +46,43 @@
         </div>
     </section>
 
-    <!-- Categories -->
-    <section class="categories" id="categories">
+    <!-- Latest Projects Section -->
+    <section class="section-dark" id="latest">
         <div class="section-header">
-            <h2 class="section-title">BROWSE BY CATEGORY</h2>
-            <p class="section-subtitle">Filter projects by expertise</p>
+            <h2 class="section-title">Latest Projects</h2>
         </div>
-        <div class="category-pills" id="categoryPills">
-            <a href="#" class="category-pill active" data-category="all">All Projects</a>
-            <a href="#" class="category-pill" data-category="web">Web Design</a>
-            <a href="#" class="category-pill" data-category="mobile">Mobile Apps</a>
-            <a href="#" class="category-pill" data-category="branding">Branding</a>
-            <a href="#" class="category-pill" data-category="ui-ux">UI/UX</a>
-            <a href="#" class="category-pill" data-category="experimental">Experimental</a>
-            <a href="#" class="category-pill" data-category="3d">3D & Animation</a>
+        <div class="projects-horizontal-scroll" id="latestProjects">
+            <!-- Latest 6 projects will be dynamically loaded here -->
         </div>
     </section>
 
-    <!-- Featured Projects -->
-    <section class="projects-section" id="featured">
+    <!-- All Projects Section -->
+    <section class="section-dark" id="all">
         <div class="section-header">
-            <h2 class="section-title">FEATURED PROJECTS</h2>
-            <p class="section-subtitle">Showcasing our most impactful work</p>
+            <h2 class="section-title">All Projects</h2>
         </div>
-        <div class="projects-grid" id="projectsGrid">
-            <!-- Projects will be dynamically loaded here -->
+        <div class="projects-horizontal-scroll" id="allProjects">
+            <!-- All 6 projects will be dynamically loaded here -->
+        </div>
+    </section>
+
+    <!-- Experimental Projects Section -->
+    <section class="section-dark" id="experimental">
+        <div class="section-header">
+            <h2 class="section-title">Experimental Projects</h2>
+        </div>
+        <div class="projects-horizontal-scroll" id="experimentalProjects">
+            <!-- Experimental 6 projects will be dynamically loaded here -->
+        </div>
+    </section>
+
+    <!-- Categories Section -->
+    <section class="section-dark" id="categories">
+        <div class="section-header">
+            <h2 class="section-title">Categories</h2>
+        </div>
+        <div class="categories-grid" id="categoriesGrid">
+            <!-- Categories will be dynamically loaded here -->
         </div>
     </section>
 
