Add pagination feature for project sections
Added pagination with navigation arrows and page numbers to display more than 6 projects per page in Latest, All Projects, and Experimental sections.

Features:
- Display 6 projects per page
- Previous/Next arrow buttons
- Clickable page numbers with active state
- Auto-hide when less than 6 projects
- Smooth scroll to section on page change

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <div class="projects-horizontal-scroll" id="latestProjects">
             <!-- Latest 6 projects will be dynamically loaded here -->
         </div>
+        <div id="latestPagination"></div>
     </section>
 
     <!-- All Projects Section -->
@@ -85,6 +86,7 @@
         <div class="projects-horizontal-scroll" id="allProjects">
             <!-- All 6 projects will be dynamically loaded here -->
         </div>
+        <div id="allPagination"></div>
     </section>
 
     <!-- Experimental Projects Section -->
@@ -95,6 +97,7 @@
         <div class="projects-horizontal-scroll" id="experimentalProjects">
             <!-- Experimental 6 projects will be dynamically loaded here -->
         </div>
+        <div id="experimentalPagination"></div>
     </section>
 
     <!-- Categories Section -->
